songkick icon was blurry so i fixed it

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,8 +38,7 @@ h3 {
 }
 
 h4{
-  margin-top: 30px;
-  margin-bottom: 12px;
+  margin: 0;
   font-weight: bold;
   letter-spacing: .4em;
 }
@@ -109,14 +108,16 @@ ul a{
   letter-spacing: .4em;
 }
 
-#songkickimg{
-  margin-bottom: 5px;
-  background-color: black;
-  border-style: solid;
-  border-color: black;
-  border-width:13px;
+#showwrapper{
+  display: flex;
+  /* top | right | bottom | left */
+  margin: 25px 0 25px 0;
 }
 
+#skcontainer{
+  width: 27px;
+  height: 27px;
+}
 
 footer {
   color: #999999;
